--- a/docutils/test/functional/expected/standalone_rst_latex.tex
+++ b/docutils/test/functional/expected/standalone_rst_latex.tex
@@ -710,7 +710,7 @@ Python-specific usage examples; begun with ">>>"
 %
 \DUfootnotetext{footnote-1}{footnote-reference-1}{1}{%
 A footnote contains body elements, consistently indented by at
-least 3 spaces.
+least 1 space.
 
 This is the footnote’s second paragraph.
 }
@@ -1504,7 +1504,7 @@ An inline image (\includegraphics{../../../docs/user/rst/images/biohazard.png}) 
 
 A Unicode example:
 
-(Substitution definitions are not visible in the HTML source.)
+(Substitution definitions are only visible in the rST source.)
 
 
 \subsection{2.16   Comments%
@@ -1521,7 +1521,7 @@ Here’s one:
 % 
 % Comments may contain non-ASCII characters: ä ö ü æ ø å
 
-(View the HTML source to see the comment.)
+(View the HTML/LaTeX/… source to see the comment.)
 
 
 \subsection{2.17   Raw text%
