--- a/docutils/test/functional/expected/standalone_rst_xetex.tex
+++ b/docutils/test/functional/expected/standalone_rst_xetex.tex
@@ -33,11 +33,10 @@
 %%% User specified packages and stylesheets
 
 %%% Fallback definitions for Docutils-specific commands
-\usepackage{docutils}[2020/08/28]
+\usepackage{docutils}[2024-09-24]
 \newcounter{enumv}
 
 \DUprovidelength{\pdfpxdimen}{1bp}
-
 
 \providecommand*{\DUCLASScontents}{%
   \renewenvironment{itemize}%
