--- a/docutils/test/functional/expected/latex_memoir.tex
+++ b/docutils/test/functional/expected/latex_memoir.tex
@@ -205,12 +205,12 @@
 123 Example Street\\
 Example, EX  Canada\\
 A1B 2C3\\
-goodger@python.org \and
+\href{mailto:goodger@python.org}{goodger@python.org} \and
 Me \and
 Myself \and
 I\\
 humankind}
-\date{Now, or yesterday.  Or maybe even before yesterday.}
+\date{Now, or yesterday.  Or maybe even \emph{before} yesterday.}
 
 %%% Body
 \begin{document}
