--- a/docutils/test/functional/expected/latex_leavevmode.tex
+++ b/docutils/test/functional/expected/latex_leavevmode.tex
@@ -162,14 +162,11 @@
 % Docinfo
 \begin{center}
 \begin{tabularx}{\DUdocinfowidth}{lX}
-\textbf{Author}: &
-	Hänsel \\
-\textbf{Author}: &
-	Gretel \\
-\textbf{Address}: &
-	{\raggedright
+\textbf{Author}: & Hänsel \\
+\textbf{Author}: & Gretel \\
+\textbf{Address}: & {\raggedright
 123 Example Street\\
-Example, EX  Canada } \\
+Example, EX  Canada} \\
 \textbf{Generic Docinfo List Field}: &
 \begin{itemize}
 \item This is a list.
