--- a/sandbox/manpage-writer/expected/refs.man
+++ b/sandbox/manpage-writer/expected/refs.man
@@ -98,11 +98,9 @@ can also refer to it like this\&.
 here.
 .SS External Hyperlink Targets
 .sp
-External hyperlinks, like Python <https://www.python.org/>
-\&.
+External hyperlinks, like Python <https://www.python.org/>\&.
 .sp
-embedded External hyperlinks, like Python <https://www.python.org/>
-\&.
+embedded External hyperlinks, like Python <https://www.python.org/>\&.
 .SS Internal Hyperlink Targets
 .sp
 Internal cross\-references, like example\&.
@@ -110,21 +108,17 @@ Internal cross\-references, like example\&.
 This is an example cross\-reference target.
 .SS Indirect Hyperlink Targets
 .sp
-Python <https://www.python.org/>
- is my favourite
-programming language <https://www.python.org/>
-\&.
+Python <https://www.python.org/> is my favourite
+programming language <https://www.python.org/>\&.
 .SH Titles are targets, too
 .sp
 Implicit references, like Titles are
 targets, too\&.
 .SH and
 .sp
-See the Python <https://www.python.org/>
- home page for info.
+See the Python <https://www.python.org/> home page for info.
 .sp
-Write to me <mailto:jdoe@example.com>
- with your questions.
+Write to me <mailto:jdoe@example.com> with your questions.
 .\" deduplicate _Python: https://www.python.org
 .
 .SS URIs with known schemes
