--- a/sandbox/manpage-writer/expected/refs-urue.man
+++ b/sandbox/manpage-writer/expected/refs-urue.man
@@ -61,11 +61,9 @@ They may be assigned \(aqautonumber
 labels\(aq \- for instance,
 [4] and [3]\&.
 .IP [3] 5
-a.k.a. 
-third
+a.k.a. third
 .IP [4] 5
-a.k.a. 
-fourth
+a.k.a. fourth
 
 .sp
 .ce
@@ -95,8 +93,7 @@ underlines, hyphens and fullstops.
 Case is not significant.
 .sp
 Given a citation like [this], one
-can also refer to it like 
-this\&.
+can also refer to it like this\&.
 .IP [this] 5
 here.
 .SS External Hyperlink Targets
@@ -114,8 +111,7 @@ Python
 \&.
 .SS Internal Hyperlink Targets
 .sp
-Internal cross\-references, like 
-example\&.
+Internal cross\-references, like example\&.
 .sp
 This is an example cross\-reference target.
 .SS Indirect Hyperlink Targets
@@ -131,8 +127,7 @@ programming language
 \&.
 .SH Titles are targets, too
 .sp
-Implicit references, like 
-Titles are
+Implicit references, like Titles are
 targets, too\&.
 .SH and
 .sp
