--- a/docutils/test/functional/expected/latex_leavevmode.tex
+++ b/docutils/test/functional/expected/latex_leavevmode.tex
@@ -162,8 +162,7 @@
 % Docinfo
 \begin{center}
 \begin{tabularx}{\DUdocinfowidth}{lX}
-\textbf{Author}: & Hänsel \\
-\textbf{Author}: & Gretel \\
+\textbf{Authors}: & Hänsel, Gretel \\
 \textbf{Address}: & {\raggedright
 123 Example Street\\
 Example, EX  Canada} \\
