--- a/docutils/test/functional/expected/standalone_rst_xetex.tex
+++ b/docutils/test/functional/expected/standalone_rst_xetex.tex
@@ -82,9 +82,7 @@
 Example, EX  Canada\\
 A1B 2C3} \\
 \textbf{Contact}: & \href{mailto:goodger@python.org}{goodger@python.org} \\
-\textbf{Author}: & Me \\
-\textbf{Author}: & Myself \\
-\textbf{Author}: & I \\
+\textbf{Authors}: & Me, Myself, I \\
 \textbf{Organization}: & humankind \\
 \textbf{Date}: & Now, or yesterday.  Or maybe even \emph{before} yesterday. \\
 \textbf{Status}: & This is a “work in progress” \\
