--- a/docutils/test/functional/expected/standalone_rst_xetex.tex
+++ b/docutils/test/functional/expected/standalone_rst_xetex.tex
@@ -889,7 +889,7 @@ layout.
 \begin{DUclass}{figclass1}
 \begin{DUclass}{figclass2}
 \begin{figure}
-\noindent\makebox[\linewidth][c]{\includegraphics[width=258bp]{../../../docs/user/rst/images/title.png}}
+\noindent\makebox[\linewidth][c]{\href{https://docutils.sourceforge.io/rst.html}{\includegraphics[width=258bp]{../../../docs/user/rst/images/title.png}}}
 \caption{Plaintext markup syntax and parser system.}
 \begin{DUlegend}
 \setlength{\DUtablewidth}{\linewidth}%
