--- a/sandbox/manpage-writer/expected/ref-2025.man
+++ b/sandbox/manpage-writer/expected/ref-2025.man
@@ -33,9 +33,9 @@ level margin: \\n[rst2man-indent\\n[rst2man-indent-level]]
  \- 
 .\" from bugs#497
 .
-Aaaaa (<aaa@bb.ccc>),
-Bbb <https://github.com/cc> (<ddd@gmail.com>).
-mm <https://github.com/m>
-nn <https://github.com/nn>
-and OooOoooo <https://github.com/OooOoooo>\&.
+Aaaaa (\%<aaa@\:bb\:.ccc>),
+Bbb \%<https://\:github\:.com/cc> (\%<ddd@\:gmail\:.com>).
+mm \%<https://\:github\:.com/m>
+nn \%<https://\:github\:.com/nn>
+and OooOoooo \%<https://\:github\:.com/\:OooOoooo>\&.
 .\" End of generated man page.
