--- a/sandbox/manpage-writer/expected/references.man
+++ b/sandbox/manpage-writer/expected/references.man
@@ -81,14 +81,14 @@ at eol
 at end of paragraph
 .SH tests
 .sp
-See <https://docutils.sourceforge.io/docs/user/rst/quickref.html#explicit-markup>
+See \%<https://\:docutils\:.sourceforge\:.io/\:docs/\:user/\:rst/\:quickref\:.html#\:explicit-markup>
 for more
 .sp
-See the Python home page <https://www.python.org> for info.
+See the Python home page \%<https://\:www\:.python\:.org> for info.
 .sp
-External hyperlinks, like Python <https://www.python.org>\&.
+External hyperlinks, like Python \%<https://\:www\:.python\:.org>\&.
 .sp
-Want to learn about my favorite programming language <https://www.python.org>?
+Want to learn about my favorite programming language \%<https://\:www\:.python\:.org>?
 .sp
 Clicking on this internal hyperlink will take us to the target
 below.
@@ -101,19 +101,19 @@ bullet list
 second item, with hyperlink target.
 .UNINDENT
 .sp
-See the Python <https://www.python.org> home page for info.
+See the Python \%<https://\:www\:.python\:.org> home page for info.
 .sp
-Write to me <mailto:jdoe@example.com> with your questions.
+Write to me \%<mailto:jdoe@\:example\:.com> with your questions.
 .sp
-The one\-liner <https://docutils.sourceforge.io/rst.html> and starts\-on\-this\-line <https://docutils.sourceforge.net/rst.html> or entirely\-below <https://docutils.sourceforge.net/rst.html> point to  <https://docutils.sourceforge.io/rst.html> and in man are ... ?
+The one\-liner \%<https://\:docutils\:.sourceforge\:.io/\:rst\:.html> and starts\-on\-this\-line \%<https://\:docutils\:.sourceforge\:.net/\:rst\:.html> or entirely\-below \%<https://\:docutils\:.sourceforge\:.net/\:rst\:.html> point to  \%<https://\:docutils\:.sourceforge\:.io/\:rst\:.html> and in man are ... ?
 .sp
 Escaped whitespace is preserved as intentional spaces, e.g.:
 .sp
-some reference <../local path with spaces.html> to a local path.
+some reference \%<../\:local path with spaces\:.html> to a local path.
 .sp
 Anonymous hyperlink references are specified with two underscores instead of one:
 .sp
-See the web site of my favorite programming language <https://www.python.org>\&.
+See the web site of my favorite programming language \%<https://\:www\:.python\:.org>\&.
 .sp
 Anonymous targets begin with \(dq.. __:\(dq; no reference name is required or allowed:
 .\" End of generated man page.
