--- a/docutils/docs/eps/ep-001.rst
+++ b/docutils/docs/eps/ep-001.rst
@@ -244,6 +244,9 @@ Reference Implementation
 .. Link to any existing implementation and details about its state, e.g.
    proof-of-concept.
 
+Since 2025-04-29, enhancement proposals are available as part of the
+Docutils Documentation under https://docutils.sourceforge.io/docs/eps/.
+
 The sandbox_ contains a directory for
 `enhancement proposals in "pre-draft" stage`_.
 
